fix for audio notify on safari

--- a/less/boxmenu.less
+++ b/less/boxmenu.less
@@ -6,7 +6,7 @@
 
 .menu.menu-course{
 	width: 100%;
-	overflow-x: hidden;
+	overflow: hidden;
 	margin-top: -60px;
 }
 
